--- a/app/src/main/res/layout/speaker_add_fragment.xml
+++ b/app/src/main/res/layout/speaker_add_fragment.xml
@@ -121,6 +121,29 @@
               android:maxLines="1"
               android:layout_below="@+id/textIp"
               android:layout_alignParentEnd="true"/>
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/editIp"
+                android:id="@+id/button_group"
+                android:orientation="vertical">
+        <RadioButton android:id="@+id/radio_top"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="@string/speaker_top"/>
+        <RadioButton android:id="@+id/radio_right"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="@string/speaker_right"/>
+        <RadioButton android:id="@+id/radio_bottom"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="@string/speaker_bottom"/>
+        <RadioButton android:id="@+id/radio_left"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="@string/speaker_left"/>
+    </RadioGroup>
 
     <Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
