--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
     </style>
 
     <style name="ButtonAppTheme" parent="android:Widget.Button">
-        <item name="android:background">@drawable/button_background</item>
+        <item name="android:background">@color/themeWhite</item>
         <item name="android:minHeight">48dip</item>
         <item name="android:minWidth">64dip</item>
         <item name="android:textColor">#000000</item>
