--- a/app/src/main/res/layout/room_detail_fragment.xml
+++ b/app/src/main/res/layout/room_detail_fragment.xml
@@ -4,30 +4,47 @@
                 xmlns:custom="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="RoomOverview"/>
+              android:text="POSITION IM RAUM"
+              android:textSize="18dp"
+              android:id="@+id/positionImRaum"/>
+
    <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
             android:layout_weight="1"
             />
+
     <de.ibs.app.roomview.RoomView
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="400dp"
             custom:showText="true"
             custom:labelPosition="left"
             android:id="@+id/roomView"
-            android:layout_below="@id/listView"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/positionImRaum"
+            android:layout_marginTop="30dp"
             />
-    <SeekBar android:layout_width="200dp"
-             android:layout_height="match_parent"
+
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="HÖHE DER PERSON"
+              android:textSize="18dp"
+              android:layout_below="@id/roomView"
+              android:layout_marginTop="10dp"
+              android:id="@+id/hoeheDerPerson"/>
+
+    <SeekBar android:layout_width="400dp"
+             android:layout_height="50dp"
+             android:layout_centerHorizontal="true"
              android:id="@+id/roomHeightSeek"
              android:progress="20"
              android:max="100"
-             android:layout_below="@id/roomView"
+             android:layout_below="@id/hoeheDerPerson"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/seekbar"
             />
 
 </RelativeLayout>
