--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -22,6 +22,7 @@
     </style>
     <style name="ActionBar.Solid.Apptheme" parent="@android:style/Widget.Holo.ActionBar.Solid">
         <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_apptheme</item>
         <item name="android:backgroundSplit">@drawable/ab_background_textured_apptheme</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Apptheme</item>
@@ -57,6 +58,11 @@
     <style name="ActionButton.CloseMode.Apptheme" parent="@android:style/Widget.Holo.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_apptheme</item>
     </style>
+
+
+
+
+
 
     <!-- this style is only referenced in a Light.DarkActionBar based theme -->
     <style name="Theme.Apptheme.Widget" parent="@android:style/Theme.Holo">
