--- a/app/src/main/res/layout/activity_speaker_acitvity.xml
+++ b/app/src/main/res/layout/activity_speaker_acitvity.xml
@@ -9,17 +9,12 @@
               android:paddingBottom="@dimen/activity_vertical_margin"
               tools:context="de.ibs.app.speaker.SpeakerAcitvity">
 
-    <TextView
-            android:text="@string/hello_world"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"/>
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button_left"
             android:text="left"
-            android:layout_below="@id/textView"
+            android:layout_margin="16dp"
             />
     <Button
             android:layout_width="match_parent"
@@ -27,6 +22,7 @@
             android:id="@+id/button_right"
             android:text="right"
             android:layout_below="@id/button_left"
+            android:layout_margin="16dp"
             />
     <Button
             android:layout_width="match_parent"
@@ -34,6 +30,7 @@
             android:id="@+id/button_up"
             android:text="up"
             android:layout_below="@id/button_right"
+            android:layout_margin="16dp"
             />
     <Button
             android:layout_width="match_parent"
@@ -41,6 +38,7 @@
             android:id="@+id/button_down"
             android:text="down"
             android:layout_below="@+id/button_up"
+            android:layout_margin="16dp"
             />
 
 </RelativeLayout>
