--- a/app/src/main/res/layout/room_overview_list_item.xml
+++ b/app/src/main/res/layout/room_overview_list_item.xml
@@ -2,9 +2,9 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:minHeight="64dp"
+                android:minHeight="80dp"
                 android:descendantFocusability="blocksDescendants"
-                android:layout_height="64dp">
+                android:layout_height="80dp">
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/textView"
@@ -19,7 +19,7 @@
             android:orientation="horizontal">
         <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -41,7 +41,7 @@
 
         <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -63,7 +63,7 @@
 
         <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:gravity="center"
