--- a/app/src/main/res/layout/room_overview_fragment.xml
+++ b/app/src/main/res/layout/room_overview_fragment.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="16dp"
-            android:background="@color/black"
+            android:background="@color/white"
             />
     <android.support.v4.view.ViewPager
             android:id="@+id/pager"
