change ActionBar Style

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white60">#EAFFFFFF</color>
     <color name="themeWhite">#fffcf1</color>
     <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
